--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -26,6 +26,7 @@
       as well as a large increase in supply. As seen on the Demand and Supply graph 
       below, there was a shift left demand and right of supply.Hence the new price 
       equilibrium sets at Eur2 per Gbp.
+      <img src="GBP:EUR.jpg">
     </body>
     
   </html>
