--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -12,10 +12,10 @@
       <h3>Examine possible factors which might have led to changes in 
       the value of the pound sterling against the euro in recent years.<h3>
       <h5>June 2004</h5>
-      <p>     Both the pound and euro are classified as currencies with a floating
+      <p width="600px">Both the pound and euro are classified as currencies with a floating
       exchange rate. This means their value is determined by market forces of 
       demand and supply.</p>
-      <p>Due to their highly speculative nature, their value can change very 
+      <p width="600px">Due to their highly speculative nature, their value can change very 
       quickly with the slightest news. Uncertainty especially will cause a selling
       of the currency. This is because of the uncertainty investors have about the
       currency’s future, and therefore decide to sell their reserves of it and move
