--- a/eco-essays.html
+++ b/eco-essays.html
@@ -3,9 +3,15 @@
   
   <head>
     <title>Thibau's Essays</title>
+    <style>
+      h1 {
+        font-family: Arial, sans-serif;
+      }
+    </style>
   </head>
   
   <body>
+    <h1>My Essays</h1>
     <a href="exchange-rates.html"><h2>Exchange Rates</h2></a>
   </body>
   
