--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -46,6 +46,8 @@
       <img src="gbpeur.jpg">
           <div class="p3">
           <div>
+            
+      <a href="eco-essays.html">Back to Essays</a>
     </body>
     
   </html>
