--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -10,12 +10,15 @@
         }
         div.p1 {
           width: 600px;
+          text-align: justify;
         }
         div.p2 {
           width: 600px;
+          text-align: justify;
         }
         div.p3 {
           width: 600px;
+          text-align: justify;
         }
       </style>
     </head>
