--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -11,14 +11,17 @@
         div.p1 {
           width: 600px;
           text-align: justify;
+          font-family: Arial, sans-serif;
         }
         div.p2 {
           width: 600px;
           text-align: justify;
+          font-family: Arial, sans-serif;
         }
         div.p3 {
           width: 600px;
           text-align: justify;
+          font-family: Arial, sans-serif;
         }
       </style>
     </head>
