--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -6,6 +6,7 @@
       <style>
         h3,
         h5 {
+          width: 600px;
           font-family: Arial, sans-serif;
         }
         div.p1 {
