--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -7,6 +7,7 @@
         h3,
         h5 {
           width: 600px;
+          text-align: justify;
           font-family: Arial, sans-serif;
         }
         div.p1 {
