--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -53,6 +53,15 @@
           </div>
       <img src="gbpeur.jpg">
           <div class="p3">
+            <p>This said, due to the floating currency’s robust feature, it is 
+              better at withstanding external shocks, and therefore the effects on 
+              the Pound’s value may have not been as great as they would have with 
+              a semi-fixed or fixed exchange rate against the Euro. The robustness 
+              comes from the demand at a certain price, although there has been a 
+              decrease in demand, the increase in supply equals out the drop in 
+              quantity of Pounds, hence people can buy more Pounds with the same 
+              amount of Euros, and the rational consumer will buy more to get better
+              value for the same amount of money.</p>
           <div>
             
       <a href="eco-essays.html">Back to Essays</a>
