--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -4,6 +4,9 @@
     <head>
       <title>Exchange Rates</title>
       <style>
+        img {
+          width: 600px;
+        }
         h3,
         h5 {
           width: 600px;
