--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -82,6 +82,7 @@
               equilibrium is formed at EUR2 and GBP2. There are not more Pounds 
               demanded, and hence, more Euros are needed to purchase one Pound.</p>
           </div>
+        <img src="gbpeur2.jpg">
       <a href="eco-essays.html">Back to Essays</a>
     </body>
     
