--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -33,6 +33,11 @@
           text-align: justify;
           font-family: Arial, sans-serif;
         }
+        div.p5 {
+          width: 600px;
+          text-align: justify;
+          font-family: Arial, sans-serif;
+        }
       </style>
     </head>
     
@@ -83,6 +88,17 @@
               demanded, and hence, more Euros are needed to purchase one Pound.</p>
           </div>
         <img src="gbpeur2.jpg">
+          <div class="p5">
+            <p>Between EUR and GBP, the change may not be so great, as the ECB have
+              an interest rate lower than the UK’s, and looking abroad, many other
+              countries provide much better returns. As hot money flows, it is likely
+              people will prefer saving their money in America (Fed) which has 2.5% 
+              interest rates, or even Australia (RBA) which has 1.5%. If the numbers
+              aren’t strong enough, Australia has been one of the most economically 
+              stable countries in the past decades, therefore the consumer’s certainty
+              and optimism is higher, and they will be more confident on a reliable 
+              return. </p>
+          </div>
       <a href="eco-essays.html">Back to Essays</a>
     </body>
     
