--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -8,7 +8,8 @@
           width: 450px;
         }
         h3,
-        h5 {
+        h5,
+        h6 {
           width: 600px;
           text-align: justify;
           font-family: Arial, sans-serif;
@@ -34,6 +35,11 @@
           font-family: Arial, sans-serif;
         }
         div.p5 {
+          width: 600px;
+          text-align: justify;
+          font-family: Arial, sans-serif;
+        }
+        div.p6 {
           width: 600px;
           text-align: justify;
           font-family: Arial, sans-serif;
@@ -99,6 +105,16 @@
               and optimism is higher, and they will be more confident on a reliable 
               return. </p>
           </div>
+          <div class="p6">
+            <p>In conclusion, Brexit has sparked a high level of uncertainty, causing
+              speculators to sell, and hence, a depreciation of the Pound against the
+              Euro. The government has tried to artificially appreciate the exchange 
+              rate, however with better returns in many other countries outside of
+              Europe, the efforts have made no significant changes and if the government
+              wants to have a stronger Pound it must turn towards other measures such 
+              as improving it’s debt and current account deficit.</p>
+          </div>
+          <h6>Thibau Grumett - 03/03/2019</h6>
       <a href="eco-essays.html">Back to Essays</a>
     </body>
     
