--- a/eco-essays.html
+++ b/eco-essays.html
@@ -13,7 +13,7 @@
   
   <body>
     <h1>My Essays</h1>
-    <a href="exchange-rates.html"><h2>Exchange Rates</h2></a>
+    <h2>- </h2><a href="exchange-rates.html"><h2>Exchange Rates</h2></a>
   </body>
   
   </html>
