--- a/eco-essays.html
+++ b/eco-essays.html
@@ -5,8 +5,12 @@
     <title>Thibau's Essays</title>
     <style>
       h1,
-      h2 {
+      h2,
+      h4,
+      h6 {
         font-family: Arial, sans-serif;
+        text-align: justify;
+        width: 600px;
       }
     </style>
   </head>
@@ -14,6 +18,8 @@
   <body>
     <h1>My Essays</h1>
     <h2>- </h2><a href="exchange-rates.html"><h2>Exchange Rates</h2></a>
+    <h4>Examine possible factors which might have led to changes in the 
+      value of the pound sterling against the euro in recent years.<h6>June 2004<h6></h4>
   </body>
   
   </html>
