--- a/eco-essays.html
+++ b/eco-essays.html
@@ -4,6 +4,9 @@
   <head>
     <title>Thibau's Essays</title>
     <style>
+      h1 {
+        position: fixed;
+      }
       h1,
       h2,
       h4,
@@ -17,7 +20,7 @@
   
   <body>
     <h1>My Essays</h1>
-    <h2>- </h2><a href="exchange-rates.html"><h2>Exchange Rates</h2></a>
+    <h2>- <a href="exchange-rates.html">Exchange Rates</a></h2>
     <h4>Examine possible factors which might have led to changes in the 
       value of the pound sterling against the euro in recent years.<h6>June 2004<h6></h4>
   </body>
