--- a/eco-essays.html
+++ b/eco-essays.html
@@ -6,7 +6,6 @@
     <style>
       h1 {
         position: fixed;
-        top: 100px;
       }
       h1,
       h2,
@@ -16,14 +15,19 @@
         text-align: justify;
         width: 600px;
       }
+      div.one {
+        position: relative;
+        top: 40px;
     </style>
   </head>
   
   <body>
     <h1>My Essays</h1>
+  <div class="one">
     <h2>- <a href="exchange-rates.html">Exchange Rates</a></h2>
     <h4>Examine possible factors which might have led to changes in the 
       value of the pound sterling against the euro in recent years.<h6>June 2004<h6></h4>
+  </div>
   </body>
   
   </html>
