--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -118,6 +118,7 @@
           
           <form action="" method="post">
             <label> Comments: </br> <textarea cols="50" rows="5" name="message"></textarea></label>
+            <input type="submit" name="post" value="Post">
           </form>
           
       <a href="eco-essays.html">Back to Essays</a>
