--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -117,7 +117,7 @@
           <h6>Thibau Grumett - 03/03/2019</h6>
           
           <div class="comment">
-            <textarea id="title" type="text "rows="25" cols="5" onkeyup="Allow()" placeholder="write a comment......"></textarea>
+            <textarea id="title" type="text "rows="25" cols="5" onkeyup="Allow()" placeholder="write a comment......"></textarea><br/>
             <input type="submit" value="Post" onclick="insert()" style="width:50px;" /></form>
           </div>
           <div id="display"></div>
