--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -118,7 +118,7 @@
           
           <div class="comment">
             <form action="com.txt" method="POST">
-              <textarea name="comment" id="comment" cols="25" rows="10">Type feedback...</textarea>
+              <textarea name="text" id="text" cols="25" rows="10">Type feedback...</textarea>
               <br/>
               <input type="submit">
             </form>
