--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -122,6 +122,9 @@
               <br/>
               <input type="submit">
             </form>
+            <form action="com.txt" method="GET">
+              <input type="submit>See Comments</input>
+            </form>
           </div>
           
       <a href="eco-essays.html">Back to Essays</a>
