--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -115,7 +115,8 @@
               as improving it’s debt and current account deficit.</p>
           </div>
           <h6>Thibau Grumett - 03/03/2019</h6>
-          
+          <br/>
+          <p>Please do not use comments section, currently not working!</p>
           <div class="comment">
             <form action="com.txt" method="POST">
               <textarea name="text" id="text" cols="25" rows="10">Type feedback...</textarea>
