--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -124,7 +124,7 @@
               <input type="submit">
             </form>
             <form action="com.txt" method="GET">
-              <input type="submit>See Comments</input>
+              <input type="submit">See Comments</input>
             </form>
           </div>
           <div>
