--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -124,7 +124,9 @@
               <input type="submit">
             </form>
             <form action="com.txt" method="GET">
-              <input type="submit">See Comments</input>
+              <label for="com">See Comments:</label>
+              <br/>
+              <input type="submit" id="com">
             </form>
           </div>
           <div>
