--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -118,12 +118,12 @@
           <br/>
           <p>Please do not use comments section, currently not working!</p>
           <div class="comment">
-            <form action="com.txt" method="POST">
+            <form action="com.html" method="POST">
               <textarea name="text" id="text" cols="25" rows="10">Type feedback...</textarea>
               <br/>
               <input type="submit">
             </form>
-            <form action="com.txt" method="GET">
+            <form action="com.html" method="GET">
               <label for="com">See Comments:</label>
               <br/>
               <input type="submit" id="com">
