--- a/exchange-rates.html
+++ b/exchange-rates.html
@@ -132,31 +132,11 @@
           <div>
       <a href="eco-essays.html">Back to Essays</a>
           </div>
-          <script type="text/javascript">
-                  
-                  // Define color variables:
-                  red = [0, 100, 63];
-                  orange = [40, 100, 60];
-                  green = [75, 100, 40];
-                  blue = [196, 77, 55];
-                  purple = [280, 50, 60];
-                  letterColors = [red, orange, green, blue, purple];
-
-                  // This variable controls the smallest distance at which a mouse will 
-                  mouseResponseThreshold = 50;
-
-                  // This variable controls how strongly the dots will try to return to their starting position
-                  friction = 0.85;
-
-                  // This variable controls how much the dots will rotate when interacting
-                  rotationForce = 0.0;
-
-                  message = 'Change the physics!';
-
-                  drawName(message, letterColors);
-                  bounceBubbles();
-
-        </script>
+          <!-- begin wwww.htmlcommentbox.com -->
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24hSkqDBvRlNmBBydOEqM5R1"+"&opts=16862&num=10&ts=1552218939265");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<!-- end www.htmlcommentbox.com -->
     </body>
     
   </html>
