--- a/coffee-demand.html
+++ b/coffee-demand.html
@@ -74,7 +74,7 @@
       scale more than its competitors and may be better able to negotiate deals when demand
       increases. </p>
           </div>
-      <img src="">
+      <img src="coffeeds.png">
           <div class="p3">
             <p>However, the reason coffee demand is price inelastic is because it is an 
             addictive good. Behavioural economics (Thaler) suggests that the UK public has 
