--- a/eco-essays.html
+++ b/eco-essays.html
@@ -22,18 +22,24 @@
   </head>
   
   <body>
+   <table>
+     <td>
     <h1>My Essays</h1>
   <div class="one">
     <h2>- <a href="exchange-rates.html">Exchange Rates</a></h2>
     <h4>Examine possible factors which might have led to changes in the 
       value of the pound sterling against the euro in recent years.<h6>June 2004<h6></h4>
   </div>
+      </td>
+    <td>
   <div class="two">
     <h2>- <a href="coffee-demand.html">Coffee Demand</a></h2>
     <h4>With reference to the information provided and your own knowledge, evaluate 
       the microeconomic and macroeconomic effects of increased UK demand for branded 
       coffee.<h6>June 2018<h6></h4>
   </div>
+      </td>
+    </table>
   </body>
   
   </html>
