--- a/eco-essays.html
+++ b/eco-essays.html
@@ -15,7 +15,8 @@
         text-align: justify;
         width: 600px;
       }
-      div.one {
+      div.one
+      div.two {
         position: relative;
         top: 100px;
     </style>
