--- a/eco-essays.html
+++ b/eco-essays.html
@@ -5,7 +5,7 @@
     <title>Thibau's Essays</title>
     <style>
       h1 {
-        position: fixed;
+        position: relative;
       }
       h1,
       h2,
