--- a/eco-essays.html
+++ b/eco-essays.html
@@ -16,25 +16,26 @@
         width: 600px;
       }
       div.one
-      div.two {
+      div.two
+      div.three {
         position: relative;
         top: 100px;
     </style>
   </head>
   
   <body>
+        <h1>My Essays</h1>
    <table>
-     <tr>
-     <td>
-    <h1>My Essays</h1>
-  <div class="one">
-    <h2>- <a href="exchange-rates.html">Exchange Rates</a></h2>
-    <h4>Examine possible factors which might have led to changes in the 
-      value of the pound sterling against the euro in recent years.<h6>June 2004<h6></h4>
+         <tr>
+    <td>
+  <div class="three">
+    <h2>- <a href="exchange-rates-two.html">Exchange Rates Two</a></h2>
+    <h4>Evaluate the microeconomic and macroeconomic effects of a change in a
+      country’s exchange rate.<h6>Unsure<h6></h4>
   </div>
       </td>
     </tr>
-       <tr>
+     <tr>
     <td>
   <div class="two">
     <h2>- <a href="coffee-demand.html">Coffee Demand</a></h2>
@@ -44,6 +45,17 @@
   </div>
       </td>
     </tr>
+     <tr>
+     <td>
+
+  <div class="one">
+    <h2>- <a href="exchange-rates.html">Exchange Rates</a></h2>
+    <h4>Examine possible factors which might have led to changes in the 
+      value of the pound sterling against the euro in recent years.<h6>June 2004<h6></h4>
+  </div>
+      </td>
+    </tr>
+       
     </table>
   </body>
   
