--- a/exchange-rates-two.html
+++ b/exchange-rates-two.html
@@ -2,7 +2,7 @@
   <html>
   
     <head>
-      <title>Coffee Demand</title>
+      <title>Exchange Rates Two</title>
       <style>
         img {
           width: 450px;
@@ -57,7 +57,15 @@
       <h5>Unsure</h5>
         
         <div class="p1">
-      <p></p>
+      <p>An exchange rate is defined as the amount of currency another currency can buy at a
+        given point in time. There are three main types of exchange rates. Floating, in which
+        it is purely the market’s demand and supply forces that determine the exchange rate.
+        Managed, in which the government or monetary organisation of an economy will intervene
+        to artificially change exchange rates to their desired level. Fixed, where the exchange
+        rate is pegged to other currencies and will be bought and sold by the government or 
+        monetary organisation of the economic region in order to achieve a stable, constant 
+        exchange rate. In this example, the Swiss Franc and Japanese Yen are ‘floating’, however
+        the Chinese Yuan or Renminbi is fixed.</p>
           
           <div class="p2">
       <p></p>
