--- a/exchange-rates-two.html
+++ b/exchange-rates-two.html
@@ -49,7 +49,7 @@
     
     <body>
       <h3>Evaluate the microeconomic and macroeconomic effects of a change in a country’s 
-        exchange rate.<br/>
+        exchange rate.<br/><br/>
         In the 5 years between 2007 and 2012 the real effective exchange rate of the Swiss
         Franc increased by 19%, the Chinese Yuan by 25%, and the Japanese Yen by 23%. However
         the USA, UK and Eurozone experienced a depreciation of their currencies.
@@ -85,20 +85,7 @@
             <p></p>
           </div>
           <h6>Thibau Grumett - 19/03/2019</h6>
-          <br/>
-          <p>Please do not use comments section, currently not working!</p>
-          <div class="comment">
-            <form action="com.html" method="GET">
-              <textarea name="text" id="text" cols="25" rows="10">Type feedback...</textarea>
-              <br/>
-              <input type="submit">
-            </form>
-            <form action="com.html" method="POST">
-              <label for="com">See Comments:</label>
-              <br/>
-              <input type="submit" id="com">
-            </form>
-          </div>
+          
           <div>
       <a href="eco-essays.html">Back to Essays</a>
           </div>
